# Larrak

./: .gitattributes  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_MANUAL.md  CamPro_LitvinPlanetary.py  CamPro_OptimalMotion.py  DASHBOARD_INTEGRATION_TODO.md  DASHBOARD_OPERATIONAL.md  DASHBOARD_READY.md  DASHBOARD_SETUP.md  DEBUG_TELEMETRY.md  DEVCONTAINER_PORT_SETUP.md  DOCKER_ACCESS_EXPLANATION.md  Dockerfile.api  Dockerfile.outline-api  Dockerfile.worker  FIX_WEAVIATE_CONNECTION.md  LAUNCH_INSTRUCTIONS.md  NLP_STRUCTURE_ANALYSIS.md  PHASE1_GUI_TEST_CHECKLIST.md  README.md  README_GUI.md  REFACTOR_PROGRESS.md  RESTART_AND_VERIFY.sh  RUN_ON_HOST.md  START_DASHBOARD_STATUS.md  TEST_DASHBOARD_WORKFLOW.md  TEST_SUMMARY.md  VALIDATION_ANALYSIS.md  VERIFY_FIX.md  VERIFY_SERVICES.md  WEAVIATE_TEST.md  analyze_nlp_structure.py  build_output.txt  cam_motion_gui.py  cam_motion_gui_clean.py  cam_motion_gui_old.py  cem_state.json  circle.json  cursor_remote_setup_guide.md  (+41 more)
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
Larrak.CEM/: Dockerfile  Larrak.CEM.sln  README.md
Motion Law Profiler/: CamPro_LitvinPlanetary.py  pyproject.toml
Motion Law Profiler/campro/: __init__.py  constants.py  logging.py
Motion Law Profiler/campro/litvin/: __init__.py  cli.py  config.py  involute_internal.py  kinematics.py  metrics.py  motion.py  op_bridge.py  optimization.py  planetary_synthesis.py
Motion Law Profiler/campro/litvin/opt/: collocation.py
Motion Law Profiler/docs/Litvin/: Litvin_meta.json
Motion Law Profiler/docs/drafts/: litvin_planetary_synthesis.md
Motion Law Profiler/scripts/: synthesize_litvin_planet.py
Motion Law Profiler/tests/: test_litvin_planetary.py
Simulations/: phase4_tasks.md  simulation_strategy.md  simulation_strategy_UPDATED.md
campro/: __init__.py  constants.py  logging.py  logging_handlers.py  units.py
cfg/: thermal_efficiency_config.yaml
compose/: app.yaml  dev.yaml  infrastructure.yaml  solvers.yaml
config/: orchestrator_config.yaml
dashboard/: api.py  api.py.bak21  api.py.bak26  api.py.bak29  api.py.bak32  api_endpoints_addition.py  final_gear_data.csv  job_queue.py  orchestrator_dashboard.html  orchestrator_dashboard.html.bak10  orchestrator_dashboard.html.bak11  orchestrator_dashboard.html.bak12  orchestrator_dashboard.html.bak13  orchestrator_dashboard.html.bak14  orchestrator_dashboard.html.bak15  orchestrator_dashboard.html.bak16  orchestrator_dashboard.html.bak18  orchestrator_dashboard.html.bak19  orchestrator_dashboard.html.bak2  orchestrator_dashboard.html.bak20  orchestrator_dashboard.html.bak22  orchestrator_dashboard.html.bak23  orchestrator_dashboard.html.bak24  orchestrator_dashboard.html.bak25  orchestrator_dashboard.html.bak27  orchestrator_dashboard.html.bak28  orchestrator_dashboard.html.bak30  orchestrator_dashboard.html.bak31  orchestrator_dashboard.html.bak33  orchestrator_dashboard.html.bak34  orchestrator_dashboard.html.bak4  orchestrator_dashboard.html.bak5  orchestrator_dashboard.html.bak6  orchestrator_dashboard.html.bak7  orchestrator_dashboard.html.bak8  orchestrator_dashboard.html.bak9  provenance_final_gear_design.html  provenance_thermo_calibration_loop.html  run_server.py  tools.js
dashboard_app/: app.py
data/: litvin_guess.json
docs/: Gaps n such.docx.md  backwards_compatibility_stopgap_analysis.md  casadi_api_examples.md  casadi_optimization_architecture.md  casadi_phase1_formulation.md  casadi_physics_api.md  casadi_physics_integration_roadmap.md  casadi_physics_user_guide.md  cascaded_optimization_summary.md  complex_optimizer_integration_plan.md  complex_optimizer_integration_summary.md  critical_tasks_breakdown.md  docker-disk-management.md  environment-management.md  hsl_solver_guide.md  implementation_quick_reference.md  implementation_roadmap.md  installation_guide.md  ipopt_integration_implementation_status.md  library_architecture_summary.md  litvin_integration_summary.md  ma27_switch_and_ma57_readiness.md  ma57_migration_strategy.md  mock_placeholder_analysis.md  modular_architecture_summary.md  motion_mapping.md  optimal_motion_design.md  phase1_implementation_summary.md  placeholder_implementation_plan.md  project_status.md  refactoring_architecture_plan.md  refactoring_plan.md  shell_based_optimization_summary.md  silent_fallback_audit_comprehensive.md  silent_fallback_audit_report.md  silent_fallback_audit_summary.md  silent_fallback_fix_plan.md  three_layer_optimization_summary.md
examples/: canonical_collocation.py
interpreter/: __init__.py  fitting.py  interface.py  inversion.py
larrak/: __init__.py  api.py
larrak-desktop/: package-lock.json  package.json
logs/: README.md
output/: gear_kinematics_results.csv  provenance_final_gear_design.html
provenance/: __init__.py  context.py  dashboard.py  dataflow_scanner.py  db.py  engineering_scanner.py  execution_events.py  hooks.py  model_registry.py  module_linker.py  registry.yaml  runtime_logger.py  scanner.py  schema.py  spec.py  tool_scanner.py  ws_server.py
runs/: 1761173944-b5f78eb4-warmstart-feas.npz  1761871382-46a0a1d2-warmstart-feas.npz  1761957067-c2c56ae1-warmstart-feas.npz  1762223570-6ddb0391-warmstart-feas.npz  1762237346-60467aad.json  1762238137-190d0d62.json  1762280073-5489a054.json  1762284256-461d7d2c.json  1762558838-7d6be5bb.json  1762558968-1a7b44c0.json  1762754994-29a6300c.json  1762793797-1e1e3422.json  1762794001-7a129c28.json  1762794395-35c8c5b3.json  1762795460-c132b3af.json  1762796966-e0d751e2.json  1762820168-c8d28785.json  1762824928-da20047b.json  1762825509-4d823d6b.json  1762826387-fc5d1eef.json  1762826954-38cc072a.json  1762834911-95ac87a9.json  1762840598-ef5f86d2.json  1762842084-4b8cd3c2.json  1762850566-5c6cad22.json  1762853215-8133d4fe.json  1762854334-28f1d71f.json  1763010726-97452b1a.json  1763011720-eeaf4cb7.json  1763016832-ce046578.json  1763018161-9e191987.json  1763082988-610aaeae.json  1763083704-56f49128.json  1763087249-b1ce7c78.json  1763088100-0ecce877.json  1763090550-7ce9ea86.json  1763090869-1bf3627b.json  1763098742-046e7aab.json  (+3 more)
scripts/: gui_demo.py  (+87 more)
(+1560 files in other folders)
