[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["campro*"]
exclude = ["tests*", "scripts*", "docs*", "examples*"]

[project]
name = "larrak"
version = "0.1.0"
description = "Optimal motion law problems using CasADi and Ipopt collocation"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "casadi>=3.6.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "joblib>=1.0",
  "scikit-learn>=1.1.0",
]
keywords = [
  "optimization",
  "motion",
  "control",
  "casadi",
  "ipopt",
  "collocation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
[project.urls]
Homepage = "https://github.com/yourusername/larrak"
Documentation = "https://github.com/yourusername/larrak/blob/main/docs/installation_guide.md"
Repository = "https://github.com/yourusername/larrak.git"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.5.0",
  "ruff>=0.0.280",
  "hypothesis>=6.82.0",
]
conda = [
  # Note: Use conda environment.yml for conda installation
  # This is just a placeholder for pip users who want to know what's needed
  "casadi>=3.6.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
]

[project.scripts]
campro-litvin = "campro.litvin.cli:main"
larrak = "scripts.larrak_cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  "miniforge3",
  "CoinHSL-archive*",
  "services",
  "runs",
  "plots",
  "docs",
  "examples",
  "specs",
  "cfg",
  "out",
  "libraries",
  "*.png",
  "*.log",
  "*.npz",
  "*.txt",
  "*.md",
  "*.yml",
  "*.yaml",
  "*.toml",
  "*.json",
  "*.ps1",
  "*.sh",
  "*.bat",
  "*.exe",
  "*.dll",
  "*.h",
  "*.0+",
  "*.pyc",
  "__pycache__",
  ".git",
  ".pytest_cache",
  "build",
  "dist",
  "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "N", "UP", "PL", "RUF"]
ignore = ["E203", "PLR0913", "PLR2004", "E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
plugins = ["numpy.typing.mypy_plugin"]
exclude = '''
(
  ^(miniforge3|CoinHSL-archive\.[^/]+|services|runs|plots|docs|examples|specs|cfg|build|dist|out|libraries)(/|$)
)|(
  /__pycache__/|^\.git(/|$)|/\.pytest_cache/
)|(
  |.*\.(png|log|npz|txt|md|ya?ml|toml|json|ps1|sh|bat|exe|dll|h|pyc)$
)|(
  ^PERMANENT_ARCHIVE(/|$)
)
'''

# Per-module overrides to keep library strict while relaxing demo scripts
[[tool.mypy.overrides]]
module = ["scripts.*"]
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
no_implicit_optional = false

# Suppress missing stubs for third-party libs commonly used in demos
[[tool.mypy.overrides]]
module = [
  "casadi.*",
  "scipy.*",
  "weaviate.*",
  "grpc.*",
  "flask.*",
  "flask_cors.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = ["PERMANENT_ARCHIVE"]
markers = [
  "performance: marks tests as performance benchmarks (deselect with '-m \"not performance\"')",
  "deprecated: marks tests as deprecated (deselect with '-m \"not deprecated\"')",
  "ipopt_phase1: runs IPOPT/HSL heavy Phase 1 integration tests (requires CAMPRO_RUN_HEAVY_TESTS=1)",
  "ipopt_phase2: runs IPOPT/HSL heavy Phase 2 integration tests (requires CAMPRO_RUN_HEAVY_TESTS=1)",
  "solver: tests that call CasADi/IPOPT",
]

[tool.pyright]
pythonVersion = "3.11"
stubPath = "campro/stubs"
reportMissingTypeStubs = false
reportUnknownMemberType = false
# Exclude directories that shouldn't be type-checked
exclude = [
  "miniforge3",
  "CoinHSL-archive*",
  "services",
  "runs",
  "plots",
  "docs",
  "examples",
  "specs",
  "cfg",
  "build",
  "dist",
  "out",
  "libraries",
  "PERMANENT_ARCHIVE",
  "**/__pycache__",
]
